static/styles/mdp.scss
/* ... */
.regular { font-weight: 400; }
.semi-bold { font-weight: 700; }
.bold { font-weight: 700; }

.cairo { font-family: 'Cairo', sans-serif!important; }
.zilla { font-family: 'Zilla Slab', serif; }


// BASE

body, html {

  @extend .zilla;
  font-size:12px;

  background-color: $color-grey--light;
  height: 100%;
  width: 100%;
  font-family: 'Cairo', sans-serif;
  color: #333;
  font-weight: 400;

}

header .navbar.navbar-default{

  &, & *:not(.glyphicon):not(.fa):not(.far):not(.fas) { @extend .cairo; }
  i, span {
    &.fa, &.fas, &.far {
      font-weight: 900!important;
    }

  }

  a { text-transform: uppercase;}

  .friends{
    $friends-padding:2px!important;

    & > *:not(:first-child):not(:last-child) {
      padding-left: $friends-padding;
      padding-right: $friends-padding;
      a{
        padding-left: $friends-padding;
        padding-right: $friends-padding;
      }
    }

    & > *:first-child{
      padding-right: $friends-padding;
      a{ padding-right: $friends-padding;  }
    }
    & > *:last-child{
      padding-left: $friends-padding;
      a{  padding-left: $friends-padding;  }
    }

  }
}

main {
  display:flex;
  & > * {
      display: flex;
      flex-grow:1;
  }
  .container{
    & > .row { width:100%}
  }
}


.transparent {opacity:0; height:0; cursor:default;}

.entity-carousel {
  .entity-carousel__header {
    @extend .cairo;
    @extend .regular;
  }

}

.home-page{
  &.container {
    display: flex;
    flex-direction: column;
    justify-content: center;
  }
  .entity-carousel__header a {  @extend .light; font-size:150%;  }
  p { font-size:1.71rem; }
}


.entity-list, .entity-detail{
  &__title, &__title *:not(i){
    text-transform: uppercase;
    @extend .cairo;
    @extend .light;
  }
}


// elements

@each $entity_name, $entity_color in $color_list {

  .entity--#{$entity_name} {
    .om-spinner__bounce {background-color: $entity_color;}
  }
  .text-#{$entity_name} { color : $entity_color!important; }
  .background-#{$entity_name} {
      background-color: $entity_color !important ;
  }

  .stripe-full--#{$entity_name} {
    &:before {
      content:"";
      background-color:$entity_color;
      position: absolute;
      height: 100%;
      width: 4000px;
      left: -2000px;
      z-index: -1;
    }
  }


}

.entity-carousel{

  background: #fff;
  border-radius: 8px 8px 0 0;

  & * { z-index: 1000;}
  &__header {
    border-radius: 8px 8px 0 0;
    text-align: center;
    h3 {
      margin:0; padding: 8% 0;
      text-transform: uppercase;
    }
  }
  &__body {
    position:relative; z-index:0;
    padding-bottom:80%; overflow: hidden;
    background: #fff;
    & > slick {
      position:absolute; top:0; left:0; bottom:0; right:0;
      width:100%; height: 100%; max-height: 100%;
    }
    img {
      width:100%;
      height:100%; min-height: 100%;
    }
  }

  .slick-arrow--custom {
    //display: none!important;
    z-index: 10000; position: absolute; top: 80%;
    cursor: pointer; font-size: 250%;
    color: $dsp-red;
    &.prev { left: 35%; }
    &.next { right: 35%; }
  }

  &:hover .slick-arrow--custom {display: inline!important;}

  // TEMPLATING
  @each $entity_name, $entity_color in $color_list {
    &--#{$entity_name}{
      .entity-carousel__header {
        background: #{$entity_color}!important;
        color:#fff!important;
        * { color:#fff!important; }
      }
    }
  }

}

.entity-list{
  &__box {
    border: solid 3px #eee;
    background: $color-white;
    //* { overflow:visible!important; }

  }
}
.entity-preview {
  width:100%;
  height:100%
}

.entity-heading {
  i { color:$color-grey}

}

.entity-sidebar {

  @each $entity_name, $entity_color in $color_list {
    &.background-#{$entity_name} {
      &:before {
        @extend .background-#{$entity_name};
        @media all and (max-width: 768px) {
          display: none !important;
          background: none;
        }
      }
    }
  }

  &::before {
    background: #bbb;
    content: ' ';
    height: 150%;
    margin-top: -25%;
    margin-left: -15px;
    position: fixed;
    width: 100%;
    z-index: 0;

    @media all and (max-width: 768px) {
      display: none;
    }

  }
}

.entity-detail{

  &-padding {
    padding:2% 8%;
  }

  &__content {
    * { z-index:1000; }
  }

  .fade {
    position: absolute;
    opacity:1;

    top: 0;
    left: 0;
    bottom:0;
    right:0;
    z-index: 1001;
    width: 100%;
    height: 100%;

    background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%);
    background-size: cover;
  }

  &__event-detail{
    position: relative;
    z-index:1002!important;
  }

  .read-more {
    position:absolute;
    bottom:0;
    left:0;
    width:100%;
    text-align: left;
    z-index:1001;
    font-weight: bold;
    * { color:#f00;}
  }

  .force-square {
    position: relative;
    width:100%;
    padding-bottom:100%;
    overflow:hidden;

    & > * {
      position: absolute;
      top:0;
      right:0;
      bottom:0;
      left:0;
      width:100%;
      height:100%;
    }
  }
}

.entity-detail-page{
  &__content {
    .entity-detail{
      &-padding {
        padding:0;
      }
    }
  }
}

.challenges-detail-page {
  background: $color-brown--light;
  i {color:$color-brown; }
}

.btn {
  @extend .cairo;
  font-weight: bold;
  border-radius: 2px;

  &--white {
    background-color: $color-white;
    border-color: $color-grey;
    color: $color-grey;

    &:hover {
      border-color: $color-grey--dark;
      color: $color-grey--dark;
    }
  }
  &--big {
    padding:15px 40px;
  }

}

// hack bootstrap cointainer
$om_breakpoints: (
  sm: (768, 100),
  md: (992, 100),
  lg: (1200, 90),
  xl: (1650, 80),
);

@each $om_size, $om_bk in $om_breakpoints {

  @media all and (min-width: #{nth($om_bk, 1)}) {
    .container{
      //width: #{nth($om_bk, 2)} px !important;
      background-color: #f00!important;
    }
  }

}

.overflow-here {
  overflow: hidden!important;
  & * { overflow: visible!important}
}
/* ... */

